[gd_scene load_steps=2 format=3 uid="uid://beqa2jii05ekd"]

[ext_resource type="Script" path="res://game/main-menu/main_menu.gd" id="1_ilhsy"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ilhsy")

[node name="Controls" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -33.0
offset_right = 46.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game" type="Button" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="Quit" type="Button" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[connection signal="button_up" from="Controls/New Game" to="." method="_new_game"]
[connection signal="button_up" from="Controls/Quit" to="." method="_quit_game"]
